--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "supervisor -w routes/,app.js,views/,public/ bin/www"
+    "start": "supervisor -w routes/,app.js,views/,public/,models/ bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
