--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
+    "bluebird": "^3.4.6",
     "nodemailer": "^2.6.4",
     "supervisor": "^0.11.0",
     "webpack": "1",
