--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "bluebird": "^3.4.6",
+    "express-session": "^1.14.2",
     "nodemailer": "^2.6.4",
     "supervisor": "^0.11.0",
     "webpack": "1",
