--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.14.2",
     "nodemailer": "^2.6.4",
     "supervisor": "^0.11.0",
+    "underscore": "^1.8.3",
     "webpack": "1",
     "zepto": "^1.2.0"
   }
